[tool.poetry]
name = "repl-nix-pharmabase2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_pharmabase2"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pandas = "^2.1.3"
sqlalchemy = "^2.0.23"
consultor = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
